--- a/shadow.css
+++ b/shadow.css
@@ -6004,9 +6004,8 @@ a.text-gray-dark:hover {
 .invisible {
   visibility: hidden !important; }
 
-body > * {
+body {
   background-color: #E5E5E5;
-  background-size: cover;
   background-repeat: none;
-  background-position: center;
-  background-image: url("Idle_Hands_Cover_2000_Saturation.png"); }
+  background-position: top left;
+  background-image: url("background.png"); }
