Commit from Pingendo

--- a/shadow.scss
+++ b/shadow.scss
@@ -155,6 +155,7 @@ $blockquote-font-size:    ($font-size-base * 1.25) !default;
 
 body {
   background-color: #E5E5E5;
+  background-size: cover;
   background-repeat: none;
   background-position: top left ;
   background-image: url('background.png');
